# my-project

ai-elderly-medicare-system/: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  run_server.py  setup.py
ai-elderly-medicare-system/.github/workflows/: ci.yml  deploy.yml
ai-elderly-medicare-system/backend/: .env.example  config.py  requirements-dev.txt  requirements.txt
ai-elderly-medicare-system/backend/app/: __init__.py  auth.py  config.py  dashboard.py  database.py  db_connect.py  deps.py  main.py  models.py  routes.py  security.py  utils.py
ai-elderly-medicare-system/backend/app/api/: __init__.py
ai-elderly-medicare-system/backend/app/ml_models/: __init__.py  health_predictor.py
ai-elderly-medicare-system/backend/app/models/: __init__.py  appointment.py  caregiver.py  database.py  delivery.py  emergency_contact.py  health_record.py  medication.py  notification.py  patient.py  prescription.py  user.py
ai-elderly-medicare-system/backend/app/schemas/: __init__.py  appointment_schema.py  auth.py  medication_schema.py  (+3 more)
ai-elderly-medicare-system/backend/migrations/: alembic.ini  env.py
ai-elderly-medicare-system/backend/tests/: __init__.py  conftest.py  test_auth.py  test_patients.py
ai-elderly-medicare-system/deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
ai-elderly-medicare-system/deployment/kubernetes/: deployment.yaml  ingress.yaml  service.yaml
ai-elderly-medicare-system/deployment/nginx/: nginx.conf
ai-elderly-medicare-system/docs/: API.md  DEPLOYMENT.md  SETUP.md  USER_GUIDE.md
ai-elderly-medicare-system/frontend/: forms.py  requirements.txt
ai-elderly-medicare-system/frontend/templates/: analytics.html  charts.html  compliance_report.html  dashboard.html  dashboard_new.html  emergency_alerts.html  export_data.html  forgot_password.html  health-monitor.html  health_reports.html  help-support.html  login.html  medical_history.html  medications.html  navigation.html  notification_center.html  notification_settings.html  patient_details.html  patient_form.html  patient_list.html  patient_profile.html  patients.html  prescriptions.html  quick_actions.html  register.html  reminder_settings.html  reminders.html  reports.html  reset_password.html  schedule.html  settings.html  stats_cards.html  supply_chain.html  test_sidebar.html  top_navigation.html  two_factor.html  update_all_navigation.py  update_navigation.py  verify_email.html
ai-elderly-medicare-system/mobile_api/: __init__.py  dependencies.py  main.py
ai-elderly-medicare-system/mobile_api/routers/: __init__.py  appointments.py  delivery.py  medications.py  notifications.py  patients.py
ai-elderly-medicare-system/notebooks/: data_analysis.ipynb  medication_adherence_analysis.ipynb  ml_model_training.ipynb  patient_insights.ipynb
ai-elderly-medicare-system/scripts/: backup_database.py  cleanup_old_data.py  generate_reports.py  seed_data.py  send_reminders.py  setup_database.py
ai-elderly-medicare-system/streamlit_app/: app.py  config.toml  requirements.txt
ai-elderly-medicare-system/streamlit_app/components/: auth.py  charts.py  forms.py  widgets.py
ai-elderly-medicare-system/streamlit_app/pages/: 1_🏠_Dashboard.py  2_👤_Patient_Management.py  3_💊_Medications.py  4_📅_Appointments.py  5_🔔_Notifications.py  6_🚚_Delivery_Tracking.py  7_📊_Analytics.py  8_⚙️_Settings.py
(+59 files in other folders)
